Introduce dedicated Bits type, Bits string codec update
JIRA: YANGTOOLS-1426
Change-Id: I66864f0425978bca95658e930ee4fbf61eb01f3d
Signed-off-by: Ruslan Kashapov <ruslan.kashapov@pantheon.tech>